# CoreAI

./: .gitignore  VERCEL_DEPLOYMENT.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
apps/web/: next.config.ts  package.json  vercel.json
apps/web/public/: manifest.json
apps/web/src/app/: globals.css  layout.tsx
apps/web/src/app/audit-logs/: page.tsx
apps/web/src/app/auth/login/: page.tsx
apps/web/src/app/auth/signup/: page.tsx
apps/web/src/app/dashboard/: page.tsx
apps/web/src/app/expenses/: page.tsx
apps/web/src/app/insights/: page.tsx
apps/web/src/app/onboarding/: page.tsx
apps/web/src/app/products/: page.tsx
apps/web/src/app/refunds/: page.tsx
apps/web/src/app/sales/: page.tsx
apps/web/src/app/sales/new/: page.tsx
apps/web/src/app/settings/: page.tsx
apps/web/src/app/staff/: page.tsx
apps/web/src/app/tomorrow/: page.tsx
apps/web/src/components/ai/: AIChatPanel.tsx  AIErrorBoundary.tsx  DailyBriefCard.tsx  SmartAlerts.tsx  TomorrowCards.tsx
apps/web/src/components/layout/: DashboardLayout.tsx
apps/web/src/components/products/: CSVImportPanel.tsx
apps/web/src/components/sales/: ProcessRefundPanel.tsx
apps/web/src/components/ui/: Badge.tsx  Button.tsx  Input.tsx  Logo.tsx  SlideOver.tsx
apps/web/src/hooks/: useAIChat.ts  useRole.ts
apps/web/src/lib/: api-client.ts  utils.ts
apps/web/src/store/: auth.store.ts
apps/web/src/types/: api.types.ts
services/api/: .env.example  pyproject.toml  requirements.txt  run_setup.ps1  vercel.json
services/api/alembic/: env.py
services/api/alembic/versions/: 31878daf48ad_link_staff_to_user.py  37cd7b2f8c45_add_email_preferences.py  7ff638b5b1d8_initial_schema.py  85b989951dc8_add_rbac_and_audit_log.py  b7e4c9f3a2d1_add_ai_usage_events.py
services/api/api/: index.py
services/api/app/: __init__.py  config.py  database.py  dependencies.py  main.py  requirements.txt
services/api/app/api/v1/: __init__.py  ai.py  audit_logs.py  auth.py  dashboard.py  expenses.py  products.py  refunds.py  sales.py  staff.py
services/api/app/core/: audit.py  cache.py  permissions.py  security.py
services/api/app/integrations/: email_service.py
services/api/app/models/: __init__.py  ai_usage.py  audit_log.py  base.py  business.py  expense.py  product.py  refund.py  sale.py  staff.py  user.py
services/api/app/schemas/: auth.py  business.py  common.py  dashboard.py  expense.py  product.py  refund.py  sale.py  staff.py  user.py
services/api/app/services/: ai_service.py  analytics.py
services/api/app/workers/: celery_app.py  insight_tasks.py
