[project]
name = "coreai-api"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "redis[hiredis]>=5.0.0",
    "anthropic>=0.30.0",
    "google-genai>=1.73.1",
    "httpx>=0.28.1",
    "python-dotenv>=1.0.0",
    "fastapi-mail>=1.4.0",
    "email-validator>=2.1.0",
    "structlog>=24.2.0",
    "bcrypt>=5.0.0",
    "pandas>=3.0.2",
    "aiosqlite>=0.22.1",
    "setuptools>=69.0.3"
]

[tool.poetry]
name = "coreai-api"
version = "1.0.0"
description = "CoreAI FastAPI Backend"
authors = ["CoreAI Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
uvicorn = {extras = ["standard"], version = "^0.30"}
pydantic = "^2.7"
pydantic-settings = "^2.3"
sqlalchemy = {extras = ["asyncio"], version = "^2.0"}
asyncpg = "^0.30"
alembic = "^1.13"
python-jose = {extras = ["cryptography"], version = "^3.3"}
passlib = {extras = ["bcrypt"], version = "^1.7"}
python-multipart = "^0.0.9"
redis = {extras = ["hiredis"], version = "^5.0"}
anthropic = "^0.30"
httpx = ">=0.28.1"
structlog = "^24.2"
python-dotenv = "^1.0"
fastapi-mail = "^1.4"
email-validator = "^2.1"
bcrypt = "^5.0.0"
pandas = "^3.0.2"
aiosqlite = "^0.22.1"
google-genai = "^1.73.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.23"
ruff = "^0.5"
mypy = "^1.10"

[tool.ruff]
line-length = 100
target-version = "py312"
